fixed text align on vidpic

--- a/vid-pic-styles.css
+++ b/vid-pic-styles.css
@@ -28,6 +28,7 @@
   font-size: 2.5rem;
   margin: 0 0 1rem;
   color: #222;
+  text-align: center;
 }
 
 .vid-pic-ctn {
